# final-project-level3-nlp-17

./: .gitignore  Collect_match_data_using_tmux.py  Create_MatchData_CSV.py  Create_MatchData_champion_combination.ipynb  README.md  Riot_API_demo.ipynb  app.py  streamlit.py
Service_Server/: app.py  model.py  pyproject.toml  riot.py
code/: Create_MatchData_CSV.py  ImportentFeature.ipynb  Untitled.ipynb  ViewImportantFeature.ipynb  arguments.py  dataset.py  false_data.csv  inference.py  inference_xgb.py  inner_evaluation.py  requirements.txt  train.py  train_xgb.py  true_data.csv  tune.py  xgb_model.model
code/src/model/: checkpoint.pt  model.pt
code/src/modules/: AttentiveTransformer.py  FeatureTransformer.py  GhostBatchNorm.py  TabNet.py  __init__.py  activations.py
code/wandb/: latest-run
code/wandb/run-20211209_093807-txj0l1zq/: run-txj0l1zq.wandb
code/wandb/run-20211209_094031-3eia54d7/: run-3eia54d7.wandb
code/wandb/run-20211209_094241-1bnpl1h8/: run-1bnpl1h8.wandb
code/wandb/run-20211209_094328-24me54ee/: run-24me54ee.wandb
code/wandb/run-20211209_094500-9d5967my/: run-9d5967my.wandb
collect_match_data/: Collect_MasteryAndWinRate.ipynb  Collect_MasteryAndWinRate_using_tmux.py  Collect_match_data.ipynb  Collect_match_data_using_tmux.py  Create_MatchData_CSV.py  Riot_API_demo.ipynb  code_for_black.py  experiments_based_on_win_rates.ipynb  logistic_regression.ipynb
frontend/: Makefile  pyproject.toml
frontend/app/: __main__.py  main.py  riot.py
frontend/statics/css/: styles.css
frontend/templates/: 404.html  index.html
(+30 files in other folders)
