[tool.poetry]
name = "final project frontend"
version = "0.1.0"
description = ""
authors = ["kwoh <kyungwon.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
